Add quote facade

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ TACHIBANASHI_PASSWORD=your_password
 # TACHIBANASHI_TIMEOUT=30s
 # TACHIBANASHI_USER_AGENT=tachibanashi
 # TACHIBANASHI_INSECURE_TLS=false
+
+# Price snapshot example
+# TACHIBANASHI_CODES=6501,6502,6503
+# TACHIBANASHI_COLUMNS=pDPP,pPRP,tDPP:T
