Add order CLI and encoding

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,15 @@ TACHIBANASHI_PASSWORD=your_password
 # Price snapshot example
 # TACHIBANASHI_CODES=6501,6502,6503
 # TACHIBANASHI_COLUMNS=pDPP,pPRP,tDPP:T
+
+# Request read example
+# TACHIBANASHI_ISSUE_CODE=6501
+# TACHIBANASHI_GENBUTU_HITUKE_INDEX=3
+# TACHIBANASHI_SINYOU_HITUKE_INDEX=0
+
+# Order list example
+# TACHIBANASHI_ORDER_ISSUE_CODE=6501
+# TACHIBANASHI_ORDER_SIKKOU_DAY=20240101
+# TACHIBANASHI_ORDER_STATUS=1
+# TACHIBANASHI_ORDER_NUMBER=18000002
+# TACHIBANASHI_EIGYOU_DAY=20240101
