Add order submit CLI

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,10 @@ TACHIBANASHI_PASSWORD=your_password
 # TACHIBANASHI_ORDER_STATUS=1
 # TACHIBANASHI_ORDER_NUMBER=18000002
 # TACHIBANASHI_EIGYOU_DAY=20240101
+
+# Order submit example (demo)
+# TACHIBANASHI_ORDER_ISSUE_CODE=6501
+# TACHIBANASHI_ORDER_BAIBAI_KUBUN=3
+# TACHIBANASHI_ORDER_QTY=100
+# TACHIBANASHI_ORDER_PRICE=0
+# TACHIBANASHI_SECOND_PASSWORD=your_second_password
