Add order CRUD CLI

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,22 @@ TACHIBANASHI_PASSWORD=your_password
 # TACHIBANASHI_ORDER_QTY=100
 # TACHIBANASHI_ORDER_PRICE=0
 # TACHIBANASHI_SECOND_PASSWORD=your_second_password
+
+# Order correct example (demo)
+# TACHIBANASHI_ORDER_NUMBER=18000002
+# TACHIBANASHI_EIGYOU_DAY=20240101
+# TACHIBANASHI_ORDER_CONDITION=*
+# TACHIBANASHI_ORDER_PRICE=*
+# TACHIBANASHI_ORDER_QTY=*
+# TACHIBANASHI_ORDER_EXPIRE_DAY=*
+# TACHIBANASHI_ORDER_GYAKUSASI_ZYOUKEN=*
+# TACHIBANASHI_ORDER_GYAKUSASI_PRICE=*
+# TACHIBANASHI_SECOND_PASSWORD=your_second_password
+
+# Order cancel example (demo)
+# TACHIBANASHI_ORDER_NUMBER=18000002
+# TACHIBANASHI_EIGYOU_DAY=20240101
+# TACHIBANASHI_SECOND_PASSWORD=your_second_password
+
+# Order CRUD flow example (demo)
+# uses order submit/correct/cancel settings above
